[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tumblr-dl"
version = "1.0.0"
description = "CLI tool for downloading media from Tumblr blogs via the Tumblr API v2"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nathan Nelson", email = "nrnelson@gmail.com" },
]
readme = "README.md"
keywords = ["tumblr", "downloader", "media", "archive", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "curl_cffi>=0.14,<1.0",
    "oauthlib>=3.2,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "python-dotenv>=1.0,<2.0",
    "aiosqlite>=0.20,<1.0",
]

[project.urls]
Homepage = "https://github.com/nrnelson/tumblr-dl"
Repository = "https://github.com/nrnelson/tumblr-dl"
Issues = "https://github.com/nrnelson/tumblr-dl/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=3.0",
    "types-oauthlib>=3.2",
    "types-beautifulsoup4>=4.12",
    "types-aiosqlite>=0.20",
]

[project.scripts]
tumblr-dl = "tumblr_dl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PGH"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
